# CGCourse2026

./: .gitignore
src/code_05_assonometry/: CMakeLists.txt  main_05.cpp
src/code_05_assonometry/shaders/: basic.frag  basic.vert
src/code_06_arm_rotations/: CMakeLists.txt  main_06.cpp
